Added href's to the icons

--- a/projects.html
+++ b/projects.html
@@ -187,74 +187,175 @@
           <header class="mt-5 skills">SKILLS</header>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Front-end</b></p>
           <div
-            class="d-flex align-items-center mb-3"
-            style="gap: 1rem; flex-wrap: wrap"
+            class="d-flex align-items-center mb-3 flexWrapCustom"
+            style="gap: 1rem"
           >
-            <img class="logos" src="./Assets/htmlIcon.png" width="8%" alt="Html logo" />
-            <img class="logos" src="./Assets/css.png" width="8%" alt="Css logo" />
-            <img
-            class="logos"
-              src="./Assets/icons8-javascript-48.png"
-              width="8%"
-              alt="JS logo"
-            />
-            <img
-              src="./Assets/icons8-bootstrap-48.png"
-              width="8%"
-              class="logos"
-            />
-            <img src="./Assets/icons8-tailwind-css-48.png width="8%" class="logos"class="logos" alt=""
-            srcset="" />
-            <img src="./Assets/icons8-vite-logo-48.png" width="8%"class="logos" alt="" />
-            <img src="./Assets/icons8-react-js-48.png" width="8%"class="logos" alt="" />
-            <img
-              src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
-              style="width: 8%"
-             class="logos"
-            />
-            <img
-              src="./Assets/png-transparent-material-ui-logo.png"
-              style="width: 8%"
-              class="logos"
-            />
+            <a href="https://html.spec.whatwg.org/multipage/" target="_blank">
+              <img
+                class="logos"
+                src="./Assets/htmlIcon.png"
+                style="width: 2.5rem"
+                alt="Html logo"
+              />
+            </a>
+            <a
+              href="https://www.w3.org/Style/CSS/Overview.en.html"
+              target="_blank"
+            >
+              <img
+                class="logos"
+                src="./Assets/css.png"
+                style="width: 2.5rem"
+                alt="Css logo"
+              />
+            </a>
+            <a href="https://www.javascript.com/" target="_blank">
+              <img
+                class="logos"
+                src="./Assets/icons8-javascript-48.png"
+                style="width: 2.5rem"
+                alt="JS logo"
+              />
+            </a>
+            <a href="https://getbootstrap.com/" target="_blank">
+              <img
+                src="./Assets/icons8-bootstrap-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://tailwindcss.com/" target="_blank">
+              <img
+                src="./Assets/icons8-tailwind-css-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://vitejs.dev/" target="_blank">
+              <img
+                src="./Assets/icons8-vite-logo-48.png"
+                style="width: 2.5rem"
+                class="logos"
+                alt=""
+              />
+            </a>
+            <a href="https://react.dev/" target="_blank">
+              <img
+                src="./Assets/icons8-react-js-48.png"
+                style="width: 2.5rem"
+                class="logos"
+                alt=""
+              />
+            </a>
+            <a href="https://nextjs.org/" target="_blank">
+              <img
+                src="./Assets/Microsoft.VisualStudio.Services.Icons.Default"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://mui.com/" target="_blank">
+              <img
+                src="./Assets/png-transparent-material-ui-logo.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Back-end</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img
-              src="./Assets/icons8-nodejs-48.png"
-              class="logos"
-              style="width: 10%; height: auto"
-            />
-            <img src="./Assets/icons8-express-js-64.png" width="7%" class="logos" />
+            <a href="https://nodejs.org/en" target="_blank">
+              <img
+                src="./Assets/icons8-nodejs-48.png"
+                class="logos"
+                style="width: 2.5rem; height: auto"
+              />
+            </a>
+            <a href="https://expressjs.com/" target="_blank">
+              <img
+                src="./Assets/icons8-express-js-64.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Database</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img src="./Assets/icons8-mongo-db-48.png" class="logos"class="logos" width="10%" /><img
-              src="./Assets/icons8-my-sql-48.png"
-              width="10%"
-             class="logos"
-            />
+            <a href="https://www.mongodb.com/" target="_blank">
+              <img
+                src="./Assets/icons8-mongo-db-48.png"
+                class="logos"
+                style="width: 2.5rem"
+              />
+            </a>
+            <a href="https://www.mysql.com/" target="_blank">
+              <img
+                src="./Assets/icons8-my-sql-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Mobile</b></p>
           <div class="d-flex align-items-center mb-3" style="gap: 1rem">
-            <img src="./Assets/What-Is-React-Native.png" width="15%" class="logos" />
+            <a href="https://reactnative.dev/" target="_blank">
+              <img
+                src="./Assets/What-Is-React-Native.png"
+                style="width: 3.5rem"
+                class="logos"
+              />
+            </a>
           </div>
           <p style="font-size: x-large; margin: 2rem 0px"><b>Tools</b></p>
           <div
-            class="d-flex align-items-center mb-3"
-            style="gap: 2rem; flex-wrap: wrap"
+            class="d-flex align-items-center mb-3 flexWrapCustom"
+            style="gap: 2rem"
           >
-            <img src="./Assets/gitlab.png" width="8%"class="logos" />
-            <img src="./Assets/github-ij3K0OZj.png" width="8%"class="logos" />
-            <img src="./Assets/vscode-DyPKvY-r.png" width="8%" class="logos"/>
-            <img
-              src="./Assets/icons8-android-studio-48.png"
-              width="8%"
-              class="logos"
-            />
-            <img src="./Assets/icons8-xcode-48.png" width="8%" class="logos" />
-            <img src="./Assets/npm.png" width="8%" class="logos" />
-            <img src="./Assets/icons8-figma-48.png" width="8%" class="logos" />
+            <a href="https://about.gitlab.com/" target="_blank">
+              <img
+                src="./Assets/gitlab.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://github.com/" target="_blank">
+              <img
+                src="./Assets/github-ij3K0OZj.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://code.visualstudio.com/" target="_blank">
+              <img
+                src="./Assets/vscode-DyPKvY-r.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://developer.android.com/studio" target="_blank">
+              <img
+                src="./Assets/icons8-android-studio-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://developer.apple.com/xcode/" target="_blank">
+              <img
+                src="./Assets/icons8-xcode-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
+            <a href="https://www.npmjs.com/" target="_blank">
+              <img src="./Assets/npm.png" style="width: 2.5rem" class="logos" />
+            </a>
+            <a href="https://www.figma.com/" target="_blank">
+              <img
+                src="./Assets/icons8-figma-48.png"
+                style="width: 2.5rem"
+                class="logos"
+              />
+            </a>
           </div>
         </div>
       </div>
