COnfigured indev.js file

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="three">A PASSIONATE FULL-STACK DEVELOPER</div>
       </div>
     </div>
-    <footer class="px-5 p-3" style="position: relative">
+    <footer class="px-5 p-3" >
       <div class="imagesDiv">
         <a href="https://github.com/GajananBodhankar" target="_blank">
           <img src="./Assets/icons8-github-60.png" alt="" height="35rem" />
