Changed static and dynamic links

--- a/projects.html
+++ b/projects.html
@@ -86,7 +86,7 @@
         <p style="font-size: x-large; margin-bottom: 5px">
           QTRIP
           <a
-            href="https://gajanan-qtrip.netlify.app/"
+            href="https://qtrip-static-kappa-flame.vercel.app/"
             class="projectTitle"
             target="_blank"
             style="font-size: large"
@@ -94,7 +94,7 @@
             Static
           </a>
           <a
-            href="https://qtrip-dynamic-one-chi.vercel.app/"
+            href="https://qtrip-dynamic-frontend.vercel.app/"
             target="_blank"
             class="projectTitle"
             style="font-size: large"
