added a new project

--- a/projects.html
+++ b/projects.html
@@ -125,33 +125,47 @@
           products, add to cart, and checkout page as per authorization with
           search bar using debouncing.
         </p>
-
+        <a
+          href="https://expense-tracker-zeta-rosy.vercel.app/"
+          target="_blank"
+          class="projectTitle"
+          >EXPENSE TRACKER</a
+        >
+        <p>
+          The Expense Tracker is a dynamic, full-stack application built with
+          Firebase that enables users to track and manage their expenses in
+          real-time. The application integrates essential functionalities such
+          as Google Sign-In for user authentication, Firebase Realtime Database
+          for seamless data storage and retrieval, JWT (JSON Web Tokens) for
+          secure user sessions, and local storage for persistent user sign-ins.
+          It also offers a user-friendly interface with advanced features like
+          adding, editing, deleting expenses, and visualizing spending patterns
+          using a pie chart.
+        </p>
         <a
           href="https://github.com/GajananBodhankar/E-Commerce-Application-React-Native.git"
           class="projectTitle"
           target="_blank"
-          >E-COMMERCE FOR ANDROID</a
+          >E-COMMERCE APPLICATION</a
         >
         <p>
-          Developed a React Native E - commerce app with user authentication
-          <a
-            href="https://fakestoreapi.com/docs"
-            class="projectTitle"
-            style="font-size: large"
-            target="_blank"
-            >credentials</a
-          >
-          , utilizing Axios for API calls and Redux for state management.
-          Designed Home screen with dynamic categories, search filters, and view
-          all feature, optimizing user product exploration. Implemented
-          efficient navigation to Product details, allowing users to add items
-          to the cart seamlessly.Utilized Flatlist for list optimization in
-          various screens, contributing to enhanced application
-          performance.Utilized Git for version control and participated in
-          regular code reviews to ensure code quality and adherence to best
+          Developed a full-featured e-commerce mobile application using React
+          Native for cross-platform compatibility with user authentication,
+          utilizing Axios for API calls and Redux for state management.
+          Integrated key features such as Google Maps, Google Sign-In, and
+          Razorpay for secure payments. Designed and implemented a NodeJS
+          backend with MongoDB Atlas for data storage, using Mongoose for schema
+          modeling. Secured user authentication with bcrypt for password hashing
+          and Joi for input validation. Utilized middlewares to ensure efficient
+          request handling and enhance application security. Implemented Jwt
+          tokens for persistent user login. Utilized Git for version control and
+          pushed code regularly to ensure code quality and adherence to best
           practices.
         </p>
-        <a href="https://blogbreeze-frontend.vercel.app/" class="projectTitle"
+        <a
+          href="https://blogbreeze-frontend.vercel.app/"
+          target="_blank"
+          class="projectTitle"
           >BLOGBREEZE</a
         >
         <p>
