--- a/projects.html
+++ b/projects.html
@@ -142,12 +142,10 @@
           adding, editing, deleting expenses, and visualizing spending patterns
           using a pie chart.
         </p>
-        <a
-          href="https://github.com/GajananBodhankar/E-Commerce-Application-React-Native.git"
-          class="projectTitle"
-          target="_blank"
+        <a href="#" class="projectTitle" target="_blank"
           >E-COMMERCE APPLICATION</a
         >
+
         <p>
           Developed a full-featured e-commerce mobile application using React
           Native for cross-platform compatibility with user authentication,
@@ -161,6 +159,14 @@
           tokens for persistent user login. Utilized Git for version control and
           pushed code regularly to ensure code quality and adherence to best
           practices.
+          <a
+            target="_blank"
+            style="font-size: large"
+            class="projectTitle"
+            href="https://drive.google.com/file/d/10-xNITqK3wdLo5O04ZtPbN9AfHekgzei/view?usp=drivesdk "
+          >
+            Download APK</a
+          >
         </p>
         <a
           href="https://blogbreeze-frontend.vercel.app/"
