--- a/about.html
+++ b/about.html
@@ -74,7 +74,8 @@
         Development Engineer with 1+ year of experience in
         <a style="color: red" href="https://reactnative.dev/" target="_blank"
           >React-Native</a
-        > currently working as Software Developer in
+        >
+        currently working as Senior Software Developer in
         <a
           href="https://hexagon.com/company/careers/capability-centre-india"
           target="_blank"
@@ -82,9 +83,9 @@
           >Hexagon Manufacturing Intelligence</a
         >
         from Hyderabad, India and and a huge fan of Single Page Applications
-        (SPAs), React JS and frameworks built around it. I work on every project
-        that I find challenging, exciting and provides a gateway to learn and
-        implement new things. I have pursued my Bachelors in
+        (SPAs), React JS, Node JS and frameworks built around it. I work on
+        every project that I find challenging, exciting and provides a gateway
+        to learn and implement new things. I have pursued my Bachelors in
         <a
           href="https://aurora.edu.in/astra.edu.in/contact-us_address.html"
           style="color: red"
@@ -100,6 +101,8 @@
         workouts. Engaging in various forms of exercise not only keeps me fit
         but also serves as a rewarding outlet for stress.
       </p>
+      <p>Why do JavaScript developers prefer dark mode?</p>
+      <p>Because light attracts bugs!</p>
       <p>
         Please <a href="./contact.html" style="color: red">contact</a> me if you
         would like to work on a project together, or just want to have long
@@ -124,8 +127,8 @@
       </div>
       <div class="desktopDisplay">
         <p style="margin: 0">
-          No &copy copyright issues.Feel free to copy.If you need any help, ping
-          me!
+          No &copy copyright issues. Feel free to copy. If you need any help,
+          ping me !
         </p>
         <p style="margin: 0">Made with ❤️ in India</p>
       </div>
@@ -137,10 +140,7 @@
         >RESUME</a
       >
       <div class="mobileDisplay">
-        <p style="margin: 0">
-          No &copy copyright issues. Feel free to copy. If you need any help,
-          ping me !
-        </p>
+        
         <p style="margin: 0">Made with ❤️ in India</p>
       </div>
     </footer>
